--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   </head>
   <body>
     <h1>Bienvenue dans le Git dédié au développement de notre site web. Si vous êtes ici, c'est parce que vous avez une intelligence intellectuelle assez élevée. Donc, ne faites pas un truc de con.</h1>
-    <img src="img/Tekew.png">
+    <img src=".img/Tekew.png">
   </body>
 </html>
