Update index.html to try and add an icon to the website
Signed-off-by: Yonatan Negash <143733511+Neptune9596@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <link rel="icon" href="/img/eglise_icone.jpg" type="image/jpg" />
+    <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>EOTC TOULOUSE</title>
   </head>
   <body>
