Changing the name of the site to its amharic name

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
-    <title>EOTC TOULOUSE</title>
+    <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
   </head>
   <body>
     <h1>Notre site est en phase de construction.</h1>
