Modifying index.html (trying to apply changes)

--- a/index.html
+++ b/index.html
@@ -3,7 +3,20 @@
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
   </head>
-  <body>
-    <h1>Notre site est en phase de construction.</h1>
-  </body>
+<body>
+  <header>
+    <nav>
+      <ul>
+        <li><a href="#">Accueil</a></li>
+        <li><a href="#">Les Pionniers</a></li>
+        <li><a href="#">La santé dans l'assiette</a></li>
+        <li><a href="#">Notre Équipe</a></li>
+      </ul>
+    </nav>
+    <div class="hero-text">
+      <h1>Gastronomie<br>& La Santé</h1>
+      <p><em>Explorer le lien entre plaisir et bien-être</em></p>
+    </div>
+  </header>
+</body>
 </html>
