changes to the html file

--- a/index.html
+++ b/index.html
@@ -2,20 +2,20 @@
   <head>
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
+    <link rel="stylesheet" href="style.css">
   </head>
 <body>
   <header>
     <nav>
       <ul>
         <li><a href="#">Accueil</a></li>
-        <li><a href="#">Les Pionniers</a></li>
-        <li><a href="#">La santé dans l'assiette</a></li>
-        <li><a href="#">Notre Équipe</a></li>
+        <li><a href="#">Notre Eglise</a></li>
+        <li><a href="#">Aidez-nous</a></li>
       </ul>
     </nav>
     <div class="hero-text">
-      <h1>Gastronomie<br>& La Santé</h1>
-      <p><em>Explorer le lien entre plaisir et bien-être</em></p>
+      <h1>EOTC TOULOUSE</h1>
+      <p><em>Decouvrez l'eglise orthodoxe ethiopienne à Toulouse</em></p>
     </div>
   </header>
 </body>
