No errors happend during the last commit. I'm changing the link to the "acceuil" page to be that of the index.html file

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -8,7 +8,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="#">Accueil</a></li>
+        <li><a href="/HTML/index.html">Accueil</a></li>
         <li><a href="#">Notre Eglise</a></li>
         <li><a href="#">Aidez-nous</a></li>
       </ul>
