--- a/HTML/notre_eglise.html
+++ b/HTML/notre_eglise.html
@@ -2,7 +2,7 @@
   <head>
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/CSS/notre_eglise.css">
   </head>
 <body>
   <header>
