j'ai placer le fichier index.html dans le repertoire html

--- a/html/index.html
+++ b/html/index.html
@@ -15,7 +15,7 @@
     </nav>
     <div class="hero-text">
       <h1>EOTC TOULOUSE</h1>
-      <p><em>Decouvrez l'eglise orthodoxe ethiopienne à Toulouse</em></p>
+      <p><em>Découvrez l'église orthodoxe éthiopienne à Toulouse</em></p>
     </div>
   </header>
 </body>
