--- a/html/index.html
+++ b/html/index.html
@@ -2,14 +2,14 @@
   <head>
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
-    <link rel="stylesheet" href="/CSS/style.css">
+    <link rel="stylesheet" href="/css/style.css">
   </head>
 <body>
   <header>
     <nav>
       <ul>
         <li><a href="index.html">Accueil</a></li>
-        <li><a href="/HTML/notre_eglise.html">Notre Eglise</a></li>
+        <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
         <li><a href="#">Aidez-nous</a></li>
       </ul>
     </nav>
