--- a/index.html
+++ b/index.html
@@ -1,22 +1,25 @@
 <html>
-  <head>
+
+<head>
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
     <link rel="stylesheet" href="/css/style.css">
-  </head>
+</head>
+
 <body>
-  <header>
-    <nav>
-      <ul>
-        <li><a href="index.html">Accueil</a></li>
-        <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
-        <li><a href="#">Aidez-nous</a></li>
-      </ul>
-    </nav>
-    <div class="hero-text">
-      <h1>EOTC TOULOUSE</h1>
-      <p><em>Découvrez l'église orthodoxe éthiopienne à Toulouse</em></p>
-    </div>
-  </header>
+    <header>
+        <nav>
+            <ul>
+                <li><a href="/index.html">Accueil</a></li>
+                <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
+                <li><a href="#">Aidez-nous</a></li>
+            </ul>
+        </nav>
+        <div class="hero-text">
+            <h1>EOTC TOULOUSE</h1>
+            <p><em>Découvrez l'église orthodoxe éthiopienne à Toulouse</em></p>
+        </div>
+    </header>
 </body>
+
 </html>
