--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -8,7 +8,7 @@
   <header>
     <nav>
       <ul>
-        <li><a href="/eotctoulouse/index.html">Accueil</a></li>
+        <li><a href="../index.html">Accueil</a></li>
         <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
         <li><a href="#">Aidez-nous</a></li>
       </ul>
