--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -3,9 +3,8 @@
 <head>
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
-    <link rel="stylesheet" href="/css/notre_eglise.css">
+    <link rel="stylesheet" href="../css/notre_eglise.css">
 </head>
-
 <body>
     <header>
         <nav>
@@ -15,11 +14,26 @@
                 <li><a href="#">Aidez-nous</a></li>
             </ul>
         </nav>
-        <div class="hero-text">
-            <h1>EOTC TOULOUSE</h1>
-            <p><em>Decouvrez l'eglise orthodoxe ethiopienne à Toulouse</em></p>
-        </div>
     </header>
+    <main>
+        <section class="image-section">
+            <img src="ch_img1.jpeg" alt="Description image 1" class="content-image">
+            <p>Ceci est une légende pour l'image ci-dessus.</p>
+        </section>
+
+        <section>
+            <p>Paragraphe de texte standard sous la première image.</p>
+            <p>Un deuxième paragraphe illustratif.</p>
+        </section>
+
+        <section class="image-section">
+            <img src="ch_img2.jpeg" alt="Description image 2" class="content-image">
+        </section>
+
+        <section>
+            <p>Dernier paragraphe avec texte incomplet <span class="incomplete-line"></span></p>
+        </section>
+    </main>
 </body>
 
 </html>
