--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -17,7 +17,7 @@
     </header>
     <main>
         <section class="image-section">
-            <img src="ch_img1.jpg" alt="Description image 1" class="content-image">
+            <img src="../img/ch_img1.jpg" alt="Description image 1" class="content-image">
             <p>Ceci est une légende pour l'image ci-dessus.</p>
         </section>
 
@@ -27,7 +27,7 @@
         </section>
 
         <section class="image-section">
-            <img src="ch_img2.jpg" alt="Description image 2" class="content-image">
+            <img src="../img/ch_img2.jpg" alt="Description image 2" class="content-image">
         </section>
 
         <section>
