ajout de la page lecture

--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -1,6 +1,9 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 
 <head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
     <link rel="stylesheet" href="/css/notre_eglise.css">
@@ -13,6 +16,9 @@
                 <li><a href="/index.html">Accueil</a></li>
                 <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
                 <li><a href="#">Aidez-nous</a></li>
+                <li>
+                    <a href="/html/lecture.html">Lire</a>
+                </li>
             </ul>
         </nav>
         <div class="hero-text">
