--- a/html/lecture.html
+++ b/html/lecture.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="/css/lecture.css">
 </head>
 
-<>
+<body>
     <header>
         <nav>
             <ul>
@@ -42,6 +42,6 @@
     </div>
 
 
-    </body>
+</body>
 
 </html>
