--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
-    <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
+    <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን</title>
     <link rel="stylesheet" href="../css/notre_eglise.css">
 </head>
 <body>
