Update index.html /Rectification du titre de la page/
Signed-off-by: Yeadonaye <115893339+yeadonaye@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
-    <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን ሰ/ት/ቤት</title>
+    <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
