--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -8,6 +8,18 @@
     <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን</title>
     <link rel="stylesheet" href="../css/notre_eglise.css">
 </head>
+
+<footer>
+  <div class="footer-content">
+    <p>&copy; 2025 Votre Église — Tous droits réservés.</p>
+    <nav class="footer-nav">
+      <a href="/index.html">Accueil</a>
+      <a href="/html/notre_eglise.html">Notre Église</a>
+      <a href="/html/contact.html">Contact</a>
+    </nav>
+  </div>
+</footer>
+
 <body>
     <header>
         <nav>
