--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -44,7 +44,7 @@
 
 <footer>
   <div class="footer-content">
-    <p>&copy; 2025 Votre Église — Tous droits réservés.</p>
+    <p>&copy; 2025 L'Église Ethiopienne Orthodox — Tous droits réservés.</p>
     <nav class="footer-nav">
       <a href="/index.html">Accueil</a>
       <a href="/html/notre_eglise.html">Notre Église</a>
