--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -36,7 +36,7 @@
             <img src="/img/ch_img2.jpg" alt="Description image 2" class="content-image">
         </section>
 
-        <section>
+        <section class="image-text">
             <p>Dernier paragraphe avec texte incomplet <span class="incomplete-line"></span></p>
         </section>
     </main>
