--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -32,11 +32,11 @@
             <p>Un deuxième paragraphe illustratif.</p>
         </section>
 
-        <section class="image-section">
+        <section class="image12">
             <img src="/img/ch_img2.jpg" alt="Description image 2" class="content-image">
         </section>
 
-        <section class="image12">
+        <section class="image-text">
             <p>Dernier paragraphe avec texte incomplet <span class="incomplete-line"></span></p>
         </section>
     </main>
