--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -22,7 +22,7 @@
         </nav>
     </header>
     <main>
-        <section class="image-section">
+        <section class="image12">
             <img src="/img/ch_img1.jpg" alt="Description image 1" class="content-image">
             <p>Ceci est une légende pour l'image ci-dessus.</p>
         </section>
