--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -27,7 +27,7 @@
             <p>Ceci est une légende pour l'image ci-dessus.</p>
         </section>
 
-        <section>
+        <section class="image12">
             <p>Paragraphe de texte standard sous la première image.</p>
             <p>Un deuxième paragraphe illustratif.</p>
         </section>
@@ -36,7 +36,7 @@
             <img src="/img/ch_img2.jpg" alt="Description image 2" class="content-image">
         </section>
 
-        <section class="image-text">
+        <section class="image12">
             <p>Dernier paragraphe avec texte incomplet <span class="incomplete-line"></span></p>
         </section>
     </main>
