--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -24,7 +24,10 @@
     <main>
         <section class="image12">
             <img src="/img/ch_img1.jpg" alt="Description image 1" class="content-image">
-            <p>Ceci est une légende pour l'image ci-dessus.</p>
+            <p>L'Église orthodoxe tewahedo éthiopienne est une dénomination établie en Éthiopie,
+            autocéphale depuis 1951, qui fait partie de l'ensemble formé par les Églises des trois 
+            conciles. Il s'agit de l'une des plus anciennes églises chrétiennes du monde, constituée 
+            vers le IVe siècle</p>
         </section>
 
         <section class="image12">
