--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -27,11 +27,22 @@
             <p>L'Église orthodoxe tewahedo éthiopienne est une dénomination établie en Éthiopie,
             autocéphale depuis 1951, qui fait partie de l'ensemble formé par les Églises des trois 
             conciles. Il s'agit de l'une des plus anciennes églises chrétiennes du monde, constituée 
-            vers le IVe siècle</p>
+            vers le IVe siècle
+            </p>
+
+            <p> Elle emploie le rite guèze. Son chef porte le titre de patriarche et catholicos d'Éthiopie,
+                itchégué du siège de Takla Haïmanot et archevêque d'Aksoum, et réside à Addis-Abeba. Le titulaire 
+                actuel est l'abouna Mathias, élu le 28 février 2013, qui a succédé à l'abouna Paulos.
+            </p>
         </section>
 
         <section class="image12">
-            <p>Paragraphe de texte standard sous la première image.</p>
+            <p>L'Église éthiopienne orthodoxe est une des premières Églises chrétiennes du continent africain. 
+               Plusieurs versions ont existé quant à l'introduction du christianisme en Éthiopie. La plus ancienne 
+               mention est celle du baptême d'un eunuque étant au service de la reine Candace par le diacre 
+               Philippe au Ier siècle. Cependant rien ne prouve que cela ait eu des conséquences en Éthiopie même 
+               à cette époque. Une autre version, tirée d'un texte apocryphe, fait intervenir saint Matthieu 
+               lui-même qui serait venu baptiser un roi axoumite et y aurait connu le martyre.</p>
             <p>Un deuxième paragraphe illustratif.</p>
         </section>
 
