--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -24,19 +24,21 @@
     <main>
         <section class="image12">
             <img src="/img/ch_img1.jpg" alt="Description image 1" class="content-image">
+            <div class="text">
             <p>L'Église orthodoxe tewahedo éthiopienne est une dénomination établie en Éthiopie,
             autocéphale depuis 1951, qui fait partie de l'ensemble formé par les Églises des trois 
             conciles. Il s'agit de l'une des plus anciennes églises chrétiennes du monde, constituée 
             vers le IVe siècle
             </p>
-
             <p> Elle emploie le rite guèze. Son chef porte le titre de patriarche et catholicos d'Éthiopie,
                 itchégué du siège de Takla Haïmanot et archevêque d'Aksoum, et réside à Addis-Abeba. Le titulaire 
                 actuel est l'abouna Mathias, élu le 28 février 2013, qui a succédé à l'abouna Paulos.
             </p>
+            </div>
         </section>
 
         <section class="image12">
+            <div class="text"></div>
             <p>L'Église éthiopienne orthodoxe est une des premières Églises chrétiennes du continent africain. 
                Plusieurs versions ont existé quant à l'introduction du christianisme en Éthiopie. La plus ancienne 
                mention est celle du baptême d'un eunuque étant au service de la reine Candace par le diacre 
@@ -44,6 +46,7 @@
                à cette époque. Une autre version, tirée d'un texte apocryphe, fait intervenir saint Matthieu 
                lui-même qui serait venu baptiser un roi axoumite et y aurait connu le martyre.</p>
             <p>Un deuxième paragraphe illustratif.</p>
+            </div>
         </section>
 
         <section class="image12">
@@ -51,7 +54,9 @@
         </section>
 
         <section class="image12">
+            <div class="text">
             <p>Dernier paragraphe avec texte incomplet <span class="incomplete-line"></span></p>
+            </div>
         </section>
     </main>
 </body>
