--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -23,7 +23,7 @@
     </header>
     <main>
         <section class="image12">
-            <img src="/img/ch_img1.jpg" alt="Description image 1" class="content-image">
+            <img src="/img/ch_img1.jpg" alt="Description image 1">
             <div class="text">
             <p>L'Église orthodoxe tewahedo éthiopienne est une dénomination établie en Éthiopie,
             autocéphale depuis 1951, qui fait partie de l'ensemble formé par les Églises des trois 
