--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -38,7 +38,7 @@
         </section>
 
         <section class="image12">
-            <div class="text"></div>
+            <div class="text">
             <p>L'Église éthiopienne orthodoxe est une des premières Églises chrétiennes du continent africain. 
                Plusieurs versions ont existé quant à l'introduction du christianisme en Éthiopie. La plus ancienne 
                mention est celle du baptême d'un eunuque étant au service de la reine Candace par le diacre 
