--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -33,6 +33,18 @@
             <p> Elle emploie le rite guèze. Son chef porte le titre de patriarche et catholicos d'Éthiopie,
                 itchégué du siège de Takla Haïmanot et archevêque d'Aksoum, et réside à Addis-Abeba. Le titulaire 
                 actuel est l'abouna Mathias, élu le 28 février 2013, qui a succédé à l'abouna Paulos.
+            
+                Tewahedo (Ge'ez: ተዋሕዶ täwaḥədo) is a Geʽez word meaning "united as one." This word refers to the 
+                Oriental Orthodox belief in Miaphysitism, meaning one perfectly unified nature of Christ; i.e., a 
+                complete union of the divine and human natures into one nature is self-evident to accomplish the 
+                divine salvation of mankind, as opposed to the "two natures of Christ" belief commonly held by the 
+                Latin and Eastern Catholic, Eastern Orthodox, Anglican, Lutheran, and most other Protestant churches.
+                The Oriental Orthodox Churches adhere to a miaphysite Christological view followed by Cyril of Alexandria,
+                the leading protagonist in the Christological debates of the 4th and 5th centuries, who advocated "mia physis
+                tou Theou logou sesarkōmenē", or "one (mia) nature of the Word of God incarnate" (μία φύσις τοῦ θεοῦ λόγου σεσαρκωμένη) 
+                and a hypostatic union (ἕνωσις καθ' ὑπόστασιν, henōsis kath' hypostasin).[10][11] The distinction of this stance was that 
+                the incarnate Christ has one nature, but that one nature is of the two natures, divine and human, and retains all the 
+                characteristics of both after the union.           
             </p>
             </div>
         </section>
