--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -48,8 +48,7 @@
             </p>
             </div>
         </section>
-
-        <section>
+        <section class="image13">
             <div>
             <p>L'Église éthiopienne orthodoxe est une des premières Églises chrétiennes du continent africain. 
                Plusieurs versions ont existé quant à l'introduction du christianisme en Éthiopie. La plus ancienne 
