--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -35,17 +35,9 @@
                 actuel est l'abouna Mathias, élu le 28 février 2013, qui a succédé à l'abouna Paulos.
             </p>
             <p>
-                Tewahedo (Ge'ez: ተዋሕዶ täwaḥədo) is a Geʽez word meaning "united as one." This word refers to the 
-                Oriental Orthodox belief in Miaphysitism, meaning one perfectly unified nature of Christ; i.e., a 
-                complete union of the divine and human natures into one nature is self-evident to accomplish the 
-                divine salvation of mankind, as opposed to the "two natures of Christ" belief commonly held by the 
-                Latin and Eastern Catholic, Eastern Orthodox, Anglican, Lutheran, and most other Protestant churches.
-                The Oriental Orthodox Churches adhere to a miaphysite Christological view followed by Cyril of Alexandria,
-                the leading protagonist in the Christological debates of the 4th and 5th centuries, who advocated "mia physis
-                tou Theou logou sesarkōmenē", or "one (mia) nature of the Word of God incarnate" (μία φύσις τοῦ θεοῦ λόγου σεσαρκωμένη) 
-                and a hypostatic union (ἕνωσις καθ' ὑπόστασιν, henōsis kath' hypostasin).[10][11] The distinction of this stance was that 
-                the incarnate Christ has one nature, but that one nature is of the two natures, divine and human, and retains all the 
-                characteristics of both after the union.           
+            Tewahedo (Guèze : ተዋሕዶ täwaḥədo) est un mot guèze qui signifie « uni en un ». Ce terme renvoie à la croyance orthodoxe orientale en le miaphysisme, c’est-à-dire l’existence d’une nature parfaitement unifiée du Christ ; autrement dit, une union complète des natures divine et humaine en une seule nature est évidente pour accomplir le salut divin de l’humanité, par opposition à la croyance en les « deux natures du Christ », généralement défendue par les Églises catholiques latine et orientale, les Églises orthodoxes orientales, anglicanes, luthériennes, ainsi que par la plupart des autres Églises protestantes.
+            Les Églises orthodoxes orientales adhèrent à une vision christologique miaphysite suivie par Cyrille d’Alexandrie, principal protagoniste des débats christologiques des IVe et Ve siècles, qui prônait le concept de « mia physis tou Theou logou sesarkōmenē », ou « une (mia) nature du Verbe de Dieu incarné » (μία φύσις τοῦ θεοῦ λόγου σεσαρκωμένη), ainsi qu’une union hypostatique (ἕνωσις καθ' ὑπόστασιν, henōsis kath' hypostasin).
+            La particularité de cette position est que le Christ incarné possède une seule nature, mais que cette unique nature résulte des deux natures, divine et humaine, et conserve toutes les caractéristiques des deux après l’union.       
             </p>
             </div>
         </section>
