--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -22,6 +22,7 @@
         </nav>
     </header>
     <main>
+        <h1>L'Histoire de l'eglise</h1>
         <section class="image12">
             <img src="/img/ch_img1.jpg" alt="Description image 1">
             <div class="text">
