--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="/index.html">Accueil</a></li>
                 <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
-                <li><a href="#">Aidez-nous</a></li>
+                <li><a href="/html/lecture.html">Textes</a></li>
             </ul>
         </nav>
         <div class="hero-text">
