--- a/html/lecture.html
+++ b/html/lecture.html
@@ -18,26 +18,11 @@
             </ul>
         </nav>
     </header>
+    <details>
+        <summary>Click to see more</summary>
+            <p>This is the hidden text that shows up when you open the dropdown.</p>
+    </details>
 
-    <div class="ag-format-container">
-        <div class="ag-courses_box">
-            <div class="ag-courses_item">
-                <a href="#" class="ag-courses-item_link">
-                    <div class="ag-courses-item_bg"></div>
-
-                    <div class="ag-courses-item_title">
-                        placeholder
-                    </div>
-
-                    <div class="ag-courses-item_date-box">
-                        Start:
-                        <span class="ag-courses-item_date">
-          </span>
-                    </div>
-                </a>
-            </div>
-        </div>
-    </div>
 
 
 </body>
