--- a/html/lecture.html
+++ b/html/lecture.html
@@ -19,8 +19,8 @@
         </nav>
     </header>
     <details>
-        <summary>Click to see more</summary>
-            <p>This is the hidden text that shows up when you open the dropdown.</p>
+    <summary>Details</summary>
+        Something small enough to escape casual notice.
     </details>
 
 
