--- a/html/lecture.html
+++ b/html/lecture.html
@@ -18,10 +18,12 @@
             </ul>
         </nav>
     </header>
+    <main>
     <details>
-    <summary>Details</summary>
-        Something small enough to escape casual notice.
+      <summary>Details</summary>
+      Something small enough to escape casual notice.
     </details>
+  </main>
 
 </body>
 
