--- a/html/lecture.html
+++ b/html/lecture.html
@@ -20,7 +20,19 @@
     </header>
     <main>
     <details>
-      <summary>Details</summary>
+      <summary>Details0</summary>
+      Something small enough to escape casual notice.
+    </details>
+    <details>
+      <summary>Details1</summary>
+      Something small enough to escape casual notice.
+    </details>
+    <details>
+      <summary>Details2</summary>
+      Something small enough to escape casual notice.
+    </details>
+    <details>
+      <summary>Details3</summary>
       Something small enough to escape casual notice.
     </details>
   </main>
