--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -14,10 +14,7 @@
             <ul>
                 <li><a href="/index.html">Accueil</a></li>
                 <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
-                <li><a href="#">Aidez-nous</a></li>
-                <li>
-                    <a href="/html/lecture.html">Lire</a>
-                </li>
+                <li><a href="/html/lecture.html">Lire</a></li>
             </ul>
         </nav>
     </header>
