--- a/html/lecture.html
+++ b/html/lecture.html
@@ -22,6 +22,8 @@
     <details>
       <summary>Details0</summary>
       Something small enough to escape casual notice.
+      <summary>Details10</summary>
+      Bla bla
     </details>
     <details>
       <summary>Details1</summary>
