--- a/html/lecture.html
+++ b/html/lecture.html
@@ -30,8 +30,31 @@
       Something small enough to escape casual notice.
     </details>
     <details>
-      <summary>Details2</summary>
-      Something small enough to escape casual notice.
+      <summary>Groupe3</summary>
+      Tout au long de sa longue histoire, elle a réalisé de nombreuses œuvres importantes pour
+faire connaître la gloire de Dieu à travers l’édification spirituelle de l’humanité.
+Elle a joué un rôle considérable dans l’unité, la paix et la liberté de l’Éthiopie. Parmi ses
+nombreuses contributions, nous pouvons en citer 7 majeures.
+1. Dans le domaine du gouvernemental et de l’administratif
+Depuis l’Antiquité, une grande partie des dirigeants éthiopiens sont issus de l’Eglise,
+ayant reçu leur formation et leur éducation dans le cadre spirituel.
+Durant l’ère du royaume d’Axum, des rois influents, tels qu'Ezana et Kaleb, étaient des
+figures ecclésiastiques. Le roi Ezana, guidé par saint Frumence et son frère Edessios, fut un
+grand souverain, profondément enraciné dans la foi chrétienne. Nous pouvons aussi citer les
+rois de la dynastie Zagoué qui étaient également des enfants de l’Église. Parmi eux, St
+Yemrehanna Kristos, St Harbé, St Lalibela et St Na’akuto Leab furent à la fois rois et prêtres.
+Ces souverains-prêtres, en plus de gouverner le pays, ont légué en héritage des
+monuments et des églises taillées dans la roche, dont la réputation perdure jusqu’à
+aujourd’hui.
+Au Moyen Âge, de nombreux rois, dont le célèbre empereur Zara Yaqob, étaient des
+dirigeants spirituels formés par l’Église. Ce dernier, en particulier, renforça de nombreux rites
+religieux, développa la vie spirituelle et enrichit les écrits écclésiastiques
+Dans une société où la justice n’avait pas encore de structure formelle, l’Église posa les
+bases du système judiciaire avec le Fetha Negest (« Code des Rois ») afin d’empêcher
+l’injustice et la partialité.
+Elle éduqua également les citoyens à la morale et à la piété, contribuant ainsi à former
+des générations patriotiques et responsables. Lors des invasions étrangères, l’Église enseigna
+l’amour de la patrie et encouragea les Éthiopiens à défendre leur libe
     </details>
     <details>
       <summary>Details3</summary>
