--- a/html/lecture.html
+++ b/html/lecture.html
@@ -22,7 +22,7 @@
     <details>
       <summary>Details0</summary>
       Something small enough to escape casual notice.
-      <summary>Details10</summary>
+      <summary></summary>
       Bla bla
     </details>
     <details>
