--- a/html/lecture.html
+++ b/html/lecture.html
@@ -31,11 +31,11 @@
     </details>
     <details>
       <summary>Groupe3</summary>
-      ትእይንት አራት፡-  የኢትዮጵያ ቤተ ክርስቲያን አበርክቶ
+<strong>ትእይንት አራት፡-  የኢትዮጵያ ቤተ ክርስቲያን አበርክቶ</strong>
         ❖	የኢትዮጵያ ኦርቶዶክስ ተዋሕዶ ቤተ ክርስትያን ጥንታዊት፡ ታሪካዊትና ሐዋርያዊት ናት፡
         ❖	በረጅሙ ታሪኳ ለሰው ልጆች ድህንነት ለእግዚአብሔር ክብር ብዙ የሥልጣኔ ሥራዎችን አስመዝግባለች፡፡
         ❖	እናት ቤተ ክርስታያን ለኢትዮጵያ አንድነት ሰላምና ነፃነት ያበረከተችውም አስተዋጽኦ በዚች አገር ታሪክ ውስጥ ልዩ ስፍራ ይዞ ይገኛል፡፡ ከዘርፈ ብዙ አበርክቶዎቿ መካከል የሚከተሉት ይገኙበታል።
-      በመንግስትና አስተዳደር ዘርፍ
+<strong>በመንግስትና አስተዳደር ዘርፍ</strong>
         ➢	ከጥንት ጀምሮ የነበሩ አብዛኛው የአገራችን መሪዎች ከቤተ ክርስቲያን የወጡና በመንፈሳዊ ትምህርት ተኮትኩተው ያደጉ መሆናቸውን ከታሪክ መዛግብት እንገነዘባለን፡፡ 
         ➢	በጥንታዊ አክሱም የሥልጣኔ ዘመን ከሚታወቁት ጠንካራ መሪዎች መካከል ኢዛና እና ካሌብ የቤተክርስቲያን ሰዎች ነበሩ። 
         ➢	ንጉሥ ኢዛና በቅዱስ ፍሬምናጦስ እና በወንድሙ ኤዴስዮስ በክርስትና ሃይማኖት ተኰትኰቶ ያደገ ደንቅ መሪ ነው፡፡
@@ -47,34 +47,34 @@
         ➢	በየጊዜው የኢትዮጵያን ብሔራዊ አንድነት ሰላምና ነፃነት ለማናጋት በከጀለው የውጭ ወራሪ ኃይል ላይ ኢትዮጵያውያን የኅብረት ክንዳቸውን እንዲያነሱ የሀገር ፍቅር ትምህርት በማስተማር ኢትዮጵያን በማዳኑ ጥረት እናት ቤተክርስቲያን ከፍተኛ አስተዋፅኦ አበርክታለች፡፡
         ➢	የኢትዮጵያዊት ቤተክርስቲያን ትናንትና የኢትዮጵያን ሎአላዊነት ሰላምና ነፃነት በማስከበር ከፍተኛ አስታዋጽኦ አድርጋለች፡፡
         ➢	ፍትህና አስተዳደርን ለማስፈን ፍትሐ ነገስት (የሕግና የቀኖና)  በማዘጋጀት፣ በማስታረቅ፣ ብራና ዳምጣ ብዕር በጥብጣ ያበረከተችው አስተዋፅኦ ከፍ ያለ ነው፡፡
-    በትምህርት ዘርፍ 
+<strong>በትምህርት ዘርፍ</strong> 
         ➢	ቤተ ክርስቲያን እስከ ቅርብ ጊዜ ድረስ የትምህርት ሚኒስቴርነቱን ኃላፊነት ይዛ ለዘመናት ኢትዮጵያን በትምህርትና በሃይማኖት ስትመራ ኖራለች፡፡
         ➢	በሥነ ጽሑፍ ዘርፍም ቢሆን ሀገራችን የራሷ ፊደል እንዲኖራት እና ለሥልጣኔ ጉልህ አስተዋጽኦ የሚያበረክቱ መጻሕፍት ባለቤት እንድትሆን ረድታለች፡፡   
         ➢	የንባብ ባሕልን ከሥር መሠረቱ በማጎልበት ለከፍተኛ ትምህርት ተቋማት ምሳሌ ሊሆን የሚችል የአብነት ትምህርት ቤቶችን በማቋቋም አያሌ ምሁራን እንዲፈሩበት ጉልህ ሥራን ሠርታለች፡፡ገዳማትና የአብነት ት/ቤቶች የቤተክርስቲያን ሊቃውንት የጥበብ መዛግብትን የሚመረምሩባቸው ማእከላትና የዜማ፣ የቅኔ፣ የመጻሕፍት፣የትርጓሜ የዕውቀት መገኛ ተቋማት ናቸው፤
         ➢	ከሁሉም በላይ ቤተ ክርስቲያን ብራና ፍቃ፤ቀለም አውጥታ፤ ብዕር ቀርጻ ከፊደል ጀምሮ እጅግ ብርቅና ድንቅ የሆኑ የሃይማኖት ፤ የታሪክ ፤ የፍልስፍና ፤ የቁጥር፤ መጽሐፈ መድሐኒት….. መጻሕፍትን ለኢትዮጵያ ብቻ ሳይሆን ለክርስትናው ዓለም ያበረከተችው አስተዋጽኦ ወደር የማይገኝለት ነው፡፡ 
         ➢	ከመንፈሳዊ ትምህርት ባሻገር ሕግና ፍትሕ፣ ሥነ- ዕጽዋት፣ ሥነ ጥበብ እና ፍልስፍናን የመሳሰሉ ለሀገር አስተዳደር፡ አስተዋጽኦ የነበራቸውን ትምህርቶች ጭምር በማካተታቸው በሀገራችን የዘመናዊ ትምህርት እስከ ተስፋፋበት ጊዜ ድረስ ለመንግሥት አስተዳደር የሚሰማሩ ነገሥታትና ምሁራን መፍለቂያ ናት።
-በሥነ-ጥበብ፡ ሥነ-ሕንፃና ዜማ ዘርፍ 
+<strong>በሥነ-ጥበብ፡ ሥነ-ሕንፃና ዜማ ዘርፍ </strong>
         ➢	በዓለማችን ታሪክ በየትኛውም ክፍላተ አኅጉራት የማይገኙ እና ደግመው መሠራት ያልተቻሉ ልዩ ልዩ የኪነ ሕንፃ ጥበቦችን በውስጧ የያዘች፤ ያስተዋወቀች እና ጠብቃ ያቆየች ናት፡፡
         ➢	ለምሳሌ ያህል፡-
-·	የአክሱም ሐውልት፤ የላሊበላ ውቅር አብያተ ክርስቲያናት እና የንጉሥ ፋሲለደስን ግንብ መጥቀስ በቂ ነው፡፡
+            ·	የአክሱም ሐውልት፤ የላሊበላ ውቅር አብያተ ክርስቲያናት እና የንጉሥ ፋሲለደስን ግንብ መጥቀስ በቂ ነው፡፡
         ➢	በዜማውም ዘርፍ የዜማ ሥርዓትን ለዓለም በቀዳሚነት በማስተዋወቅ፣ ሰማያዊ ሥርዓት ያለውን ዜማ በሊቁ ቅዱስ ያሬድ አማካኝነት አበርክታለች፡፡
-በቅርስ ጥበቃና እንክብካቤ
+<strong>በቅርስ ጥበቃና እንክብካቤ</strong>
         ➢	ዓለምን ያስደነቁና በቅርስነትም የተመዘገቡ ከአንድ ወጥ አለት ተፈልፈለው የታነፁ አብያተ ክርስቲያናት ፣ የግድግዳ ላይ ሥዕሎች፣ የብራና መጻሕፍት፡ ልዩ ልዩ ቅርሳ ቅርሶች ባለቤት ናት፡፡
         ➢	የቤተ ክርስቲያን ንዋያተ ቅድሳትን፣ የነገሥታቱ አልባሳት የክብርና የወግ እቃዎችን፣ ልዩ ልዩ መጻሕፍትን፣ የእደ ጥበብና ሥነ ጥበባት ውጤቶችን፣ ከጥፋት ከዘረፋ ለመታደግ የኢትዮጵያ አብያተ መዛግብት (archives) በመሆን ታገለግላለች።ቅርሶችን በመጎብኘት ዕውቀትን ለማግኘት ወደ ገዳም የሚሔዱ የሀገር ውስጥና የውጭ ጎብኚዎች እንዲሁም ከገዳማቱ በረከት ለመሳተፍ የሚሳለሙ ምእመናን በሚያደርጓቸው ጉዞዎች ሀገሪቱ ምጣኔ ሀብታዊ ጥቅም እንድታገኝ ያግዛል፡፡በአጠቃላይ  ስነ-ጽሁፍ ከነፊደሉ፣ ነፃነት ከነክብሩ፣ ዘመን ከነቀመሩ፣ ሀገርን ከነድንበሩ፣ ሀገር እንደ ሀገር የተሰራበት ማገርና ምሰሶ ያቆመች ጠንካራ መሰረት በጽኑ አለት ላይ  የጣለች  ቅድስት የኢትዮጵያ ኦርቶዶክስ  ተዋህዶ ቤተክርስቲያን ነች፡፡ 
         ➢	ስለዚህ የኢትዮጵያ ኦርቶዶክስ ተዋሕዶ ቤተክርስቲያን ትናንት ምን ሠራች ዛሬስ ምን እያደረገች ነው ነገስ በበኩሌ እነዚህ ጥያቄዎች በሰከነ አእምሮ መመለስ የዚህ ትውልድ ታሪካዊ ግዴታ ይሆናል፡፡
-በቱሪዝም እና ኢኮኖሚ ዘርፍ
+<strong>በቱሪዝም እና ኢኮኖሚ ዘርፍ</strong>
         ➢	ከ80-90% በላይ የሀገሪቱ የሚጎበኙ ቅርሶች የቤተክርስቲያኗ ሀብቶች ናቸው፡፡ ይህ ማለት ቤተክርስቲያኗ ሃይማኖትን ከሀገር ፍቅር ጋር አያይዛ ስትሰራ መቆየቷንና አሁንም  እየሰራች እንደሆነ ያመላክታል፡፡
         ➢	በዪኔስኮ የተመዘገቡ የቤተክርስቲያናችን መንፈሳዊ በዓላት ለቤተክርስቲያን ለሀገርም ብዙ ጥቅሞችን እያስገኘ ነው፡፡
         ➢	ዓለም የተደነቀባቸው እና በእጅጉ ያወደሳቸው የላሊበላ  ውቅር አብያተ ክርስቲያናት በ1979ዓ.ም በተባበሩት መንግሥታት ድርጅት የትምህርት፤ የሳይንስ እና የባሕል ድርጅት (UNSCO) አማካኝነት በዓለም ቅርስነት ተመዝግበው ይገኛሉ፡፡በጣና ሐይቅ ከ13ኛ ምዕት ዓመት ጀምሮ በየዘመኑ እንደተመሠረቱ የሚነገርላቸው በርካታ ገዳማት ያሉ ሲሆን በገዳማቱ የኢትዮጵያ ቤተ ክርስቲያን ቅርሶች፣ ጥንታውያን የ13ኛው ምዕት ዓመት የብራና መጻሕፍትና  ሥዕል እንዲሁም የቀድሞ ነገሥታት አልባሳትና አፅም የሚገኙ በመሆኑ በቱሪዝም ዘርፍ ከፍተኛ ሚና አላቸው፡፡
         ➢	ጎንደር ደብረ ብርሃን ስላሴ ቤተክርስቲያን፣ የጎንደር ፋሲልለደስ ግንብና በዙሪያው ያሉ አቢያተክርስቲያናት፣ በትግራይ ደብረዳሞ እና ሌሎች በርካታ ገዳማት በቱረዝም ዘርፍ ክፍተኛ አስታዋጽኦ እያበረከቱ ይገኛሉ፡፡
-በሥነ-ምህዳርና በተፈጥሮ ሀብት ጥበቃ
+<strong>በሥነ-ምህዳርና በተፈጥሮ ሀብት ጥበቃ</strong>
         ➢	ቤተ ክርስቲያን ተፈጥሮአዊ የሆኑ የዕፀዋት ዝርያዎችን በአግባቡ በመጠበቅ እና በመንከባከብ የሀገር ሕልውናን በማስጠበቅ እና ተፈጥሮ ዑደቱ ሳይዛባ እንዲቀጥል በማድረግም እጅግ የጎላ አገልግሎቷን በማስመዝገብ ላይ ናት፡፡ 
         ➢	በገዳማት የሚኖረው መንፈሳዊ ኑሮ ቁጥብ፣ እግዚአብሔርን የመምሰልና ርኅራኄን የተሞላ በመሆኑ ለዕፅዋትና እንስሳት ሳይቀር በማዘን የሚኖሩባቸው ሥፍራዎች ናቸው፡፡ በመሆኑም በገዳማት ዙሪያ ያሉ ዕîዋትና እንስሳት ከጥፋት ተርፈው ዘመናትን ተሻግረዋል፡፡
         ➢	ገዳማት አብዛኞቹ በሰፋፊ ደኖች ወይም ዐፀድ የተሸፈኑ በመሆናቸው ቤተክርስቲያን ለብዝኀ ሕይወት (biodiversity) ጥበቃ ያላትን ከፍተኛ ሚና ያሳያል፡፡ በዚህም ቤተክርስቲያን የአካባቢና የተፈጥሮ ሀብት ጥበቃ ባለቤት የብርቅዬ የዱር እንስሳት መገኛ  ስፍራ ያደርጋታል፡፡ “ዛፍ የሌለው ደብር ጺም የሌለው መምህር” እንዲሉ አበው “ከቤተ ክርስቲያን የተጠጋ እንኳን ሰው ዛፍ ይጸድቃል” ብፁዕ አቡነ ናትናኤል፡፡
         ➢	ዝርያቸው ሊጠፉ የተቃረቡ የዕፀዋት ዓይነቶችን ጠብቃ ያቆየች የኢትዮጵያ ኦርቶዶክስ ተዋሕዶ ቤተክርስቲያን ናት፡፡ 
         ➢	በገዳማት የሚኖረው መንፈሳዊ ኑሮ ቁጥብ፣ እግዚአብሔርን የመምሰልና ርኅራኄን የተሞላ በመሆኑ ለዕፅዋትና እንስሳት ሳይቀር በማዘን የሚኖሩባቸው ሥፍራዎች ናቸው፡፡
         ➢	በመሆኑም በገዳማት ዙሪያ ያሉ ዕፀዋትና እንስሳት ከጥፋት ተርፈው ዘመናትን ተሻግረዋል፡፡ “ዛፍ የሌለው ደብር ጺም የሌለው መምህር” እንዲሉ አበው “ከቤተ ክርስቲያን የተጠጋ እንኳን ሰው ዛፍ ይጸድቃል” ብፁዕ አቡነ ናትናኤል፡፡
-በማኅበራዊ ዘርፍ ካበረከተቻቸው መካከል፡-
+<strong>በማኅበራዊ ዘርፍ ካበረከተቻቸው መካከል፡- </strong>
         ➢	በጤና ዘርፍ (ሆስፒታል፣ የጸበልና የጸሎት ፈውስ)፣
         ➢	ግብረ ገብነትና አብሮ የመኖርና መቻቻል እሴት፣
         ➢	ገዳማት ከሚሰጧቸው መንፈሳዊ አገልግሎቶች በተጨማሪ ጧዋሪ የሌላቸውን አረጋውያንን በመንከባከብ፣ወላጆቻቸውን በተለያዩ ምክንያት ያጡ ሕጻናትን በማሳደግ፣ 
