--- a/html/lecture.html
+++ b/html/lecture.html
@@ -19,6 +19,7 @@
         </nav>
     </header>
     <main>
+    <a id="top"></a>
     <details>
       <summary>Groupe1</summary>
       Something small enough to escape casual notice.
@@ -240,6 +241,8 @@
       Something small enough to escape casual notice.
     </details>
   </main>
+  <a href="#top" class="to-top-btn">⬆</a>
+
 
 </body>
 
