--- a/html/notre_eglise.html
+++ b/html/notre_eglise.html
@@ -57,6 +57,13 @@
 
         <section class="image12">
             <div class="text">
+            <p>L'Église orthodoxe éthiopienne utilise un calendrier liturgique qui a la 
+               particularité de combiner des fêtes annuelles et des fêtes mensuelles 
+               (le 7 de chaque mois est célébrée la Trinité, le 12, saint Michel 
+               archange, le 16, la « promesse de miséricorde » -
+               kidane mehret, ኪዳነ ምሕረት - promesses de Dieu à Marie concernant le salut 
+               des croyants -, le 21, l'Assomption de Marie, le 27, la mort du Seigneur, 
+               le 29, la naissance du Seigneur).</p>    
             </div>
         </section>
     </main>
