Le texte inserer etais pour le groupe 2 mais pas pour le groupe 3

--- a/html/lecture.html
+++ b/html/lecture.html
@@ -27,10 +27,6 @@
     </details>
     <details>
       <summary>Groupe2</summary>
-      Something small enough to escape casual notice.
-    </details>
-    <details>
-      <summary>Groupe3</summary>
 <strong>ትእይንት አራት፡-  የኢትዮጵያ ቤተ ክርስቲያን አበርክቶ</strong>
         ❖	የኢትዮጵያ ኦርቶዶክስ ተዋሕዶ ቤተ ክርስትያን ጥንታዊት፡ ታሪካዊትና ሐዋርያዊት ናት፡
         ❖	በረጅሙ ታሪኳ ለሰው ልጆች ድህንነት ለእግዚአብሔር ክብር ብዙ የሥልጣኔ ሥራዎችን አስመዝግባለች፡፡
@@ -202,6 +198,11 @@ L’Église a aussi eu une contribution importante dans le domaine social.
 orphelins.
 – Les monastères participent au bien-être collectif en proposant une stabilité et un soutien
 spirituel lorsque les fidèles font face à des problèmes sociaux.
+    </details>
+    <details>
+      <summary>Groupe3</summary>
+      <summary></summary>
+      
     </details>
     <details>
       <summary>Groupe4</summary>
