--- a/html/notre-eglise.html
+++ b/html/notre-eglise.html
@@ -9,8 +9,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css" />
-  <link rel="icon" type="image/x-icon" href="eglise_icone.ico" />
+  <link rel="stylesheet" href="/css/styles.css" />
+  <link rel="icon" type="image/x-icon" href="/img/eglise_icone.ico" />
   <!-- Canonical URL for SEO; update to your final public URL if deployed -->
   <link rel="canonical" href="notre-eglise.html" />
   <meta property="og:title" content="Notre Église – EOTC Toulouse" />
@@ -84,8 +84,8 @@
       </div>
       <!-- Centered navigation links -->
       <nav id="nav-menu" class="nav-menu" aria-label="Navigation principale">
-        <a href="index.html">Accueil</a>
-        <a href="index.html#events">Événements à venir</a>
+        <a href="/index.html">Accueil</a>
+        <a href="/html/lecture.html">Événements à venir</a>
       </nav>
     </div>
   </header>
