--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Accueil</a></li>
-                <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
+                <li><a href="/html/notre-eglise.html">Notre Eglise</a></li>
                 <li><a href="/html/lecture.html">Meskel</a></li>
             </ul>
         </nav>
