--- a/html/notre-eglise.html
+++ b/html/notre-eglise.html
@@ -16,7 +16,7 @@
   <meta property="og:title" content="Notre Église – EOTC Toulouse" />
   <meta property="og:description" content="Église orthodoxe éthiopienne à Toulouse (Tewahedo). Découvrez notre histoire, notre foi et nos pratiques." />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="egliseinterior.jpg" />
+  <meta property="og:image" content="/img/egliseinterior.jpg" />
   <style>
     /* ==========================================
        Page-specific styles (light theme + layout)
@@ -79,7 +79,7 @@
     <div class="container nav">
       <div class="nav-left">
         <!-- Site icon + brand (link to top of page) -->
-        <img class="logo-icon" src="eglise_icone.ico" alt="Icône Église" />
+        <img class="logo-icon" src="/img/eglise_icone.ico" alt="Icône Église" />
         <a href="#top" class="brand" aria-label="Haut de page">EOTC Toulouse</a>
       </div>
       <!-- Centered navigation links -->
