--- a/html/notre-eglise.html
+++ b/html/notre-eglise.html
@@ -12,7 +12,7 @@
   <link rel="stylesheet" href="/css/styles.css" />
   <link rel="icon" type="image/x-icon" href="/img/eglise_icone.ico" />
   <!-- Canonical URL for SEO; update to your final public URL if deployed -->
-  <link rel="canonical" href="notre-eglise.html" />
+  <link rel="canonical" href="eotctoulouse.org" />
   <meta property="og:title" content="Notre Église – EOTC Toulouse" />
   <meta property="og:description" content="Église orthodoxe éthiopienne à Toulouse (Tewahedo). Découvrez notre histoire, notre foi et nos pratiques." />
   <meta property="og:type" content="website" />
@@ -34,7 +34,7 @@
     .logo-icon{ width:24px; height:24px; object-fit:cover; border-radius:50%; overflow:hidden }
     .cover{
       position:relative; min-height:54vh; display:grid; place-items:center; text-align:center; color:#fff;
-      background-image: url('egliseinterior.jpg');
+      background-image: url('img/egliseinterior.jpg');
       background-size:cover; background-position:center; isolation:isolate;
     }
     .cover::after{ content:""; position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.45), rgba(0,0,0,.55)); z-index:-1 }
