--- a/html/notre-eglise.html
+++ b/html/notre-eglise.html
@@ -34,7 +34,7 @@
     .logo-icon{ width:24px; height:24px; object-fit:cover; border-radius:50%; overflow:hidden }
     .cover{
       position:relative; min-height:54vh; display:grid; place-items:center; text-align:center; color:#fff;
-      background-image: url('img/egliseinterior.jpg');
+      background-image: url('/img/egliseinterior.jpg');
       background-size:cover; background-position:center; isolation:isolate;
     }
     .cover::after{ content:""; position:absolute; inset:0; background:linear-gradient(180deg, rgba(0,0,0,.45), rgba(0,0,0,.55)); z-index:-1 }
