--- a/html/lecture.html
+++ b/html/lecture.html
@@ -15,7 +15,7 @@
         <nav>
             <ul>
                 <li><a href="/index.html">Accueil</a></li>
-                <li><a href="/html/notre_eglise.html">Notre Eglise</a></li>
+                <li><a href="/html/notre-eglise.html">Notre Eglise</a></li>
             </ul>
         </nav>
     </header>
