--- a/html/notre-eglise.html
+++ b/html/notre-eglise.html
@@ -85,7 +85,7 @@
       <!-- Centered navigation links -->
       <nav id="nav-menu" class="nav-menu" aria-label="Navigation principale">
         <a href="/index.html">Accueil</a>
-        <a href="/html/lecture.html">Événements à venir</a>
+        <a href="/html/evenements.html">Événements à venir</a>
       </nav>
     </div>
   </header>
