--- a/html/evenements.html
+++ b/html/evenements.html
@@ -20,10 +20,10 @@
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
   
   <!-- Stylesheets -->
-  <link rel="stylesheet" href="evenements.css" />
+  <link rel="stylesheet" href="/css/evenements.css" />
   
   <!-- Favicon -->
-  <link rel="icon" type="image/x-icon" href="eglise_icone.ico" />
+  <link rel="icon" type="image/x-icon" href="/img/eglise_icone.ico" />
   
   <!-- SEO: Canonical URL (update to your actual domain when deployed) -->
   <link rel="canonical" href="https://eotc-toulouse.fr/evenements.html" />
@@ -87,7 +87,7 @@
       </div>
       <nav class="nav-menu" aria-label="Navigation principale">
         <a href="index.html">Accueil</a>
-        <a href="notre-eglise.html">Notre Église</a>
+        <a href="/html/notre-eglise.html">Notre Église</a>
       </nav>
     </div>
   </header>
