--- a/html/evenements.html
+++ b/html/evenements.html
@@ -82,11 +82,11 @@
   <header class="header">
     <div class="container nav">
       <div class="nav-left">
-        <img class="logo-icon" src="eglise_icone.ico" alt="Icône Église" />
-        <a href="index.html" class="brand" aria-label="Accueil">EOTC Toulouse</a>
+        <img class="logo-icon" src="/img/eglise_icone.ico" alt="Icône Église" />
+        <a href="/index.html" class="brand" aria-label="Accueil">EOTC Toulouse</a>
       </div>
       <nav class="nav-menu" aria-label="Navigation principale">
-        <a href="index.html">Accueil</a>
+        <a href="/index.html">Accueil</a>
         <a href="/html/notre-eglise.html">Notre Église</a>
       </nav>
     </div>
