--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
     <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
-    <title>የቱሉዝ ደ/ምሕረት ቅ/ሚካኤል ቤ/ክርስቲያን</title>
+    <title>Église orthodoxe éthiopienne à Toulouse</title>
     <link rel="stylesheet" href="/css/style.css">
 </head>
 
