--- a/index.html
+++ b/index.html
@@ -1,25 +1,107 @@
-<html>
+<!DOCTYPE html>
+<html lang="fr">
 
 <head>
-    <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
-    <title>EOTC - Église orthodoxe éthiopienne à Toulouse</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+    <!-- Title with primary keyword -->
+    <title>EOTC Toulouse – Église orthodoxe éthiopienne | Église Tewahedo</title>
+
+    <!-- Meta description optimized for search -->
+    <meta name="description" content="Découvrez l'Église EOTC Toulouse – Église orthodoxe éthiopienne Tewahedo à Toulouse. Histoire, foi, liturgie et événements de notre communauté.">
+
+    <!-- Canonical URL -->
+    <link rel="canonical" href="https://eotctoulouse.org">
+
+    <!-- Favicon -->
+    <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon">
+
+    <!-- Stylesheet -->
     <link rel="stylesheet" href="/css/style.css">
+
+    <!-- Open Graph for social sharing -->
+    <meta property="og:title" content="EOTC Toulouse – Église orthodoxe éthiopienne">
+    <meta property="og:description" content="Découvrez l'Église EOTC Toulouse – Église orthodoxe éthiopienne Tewahedo à Toulouse.">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://eotctoulouse.org">
+    <meta property="og:image" content="/img/eglise_icone.ico">
+
+    <!-- Structured Data (Schema.org for Church) -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "Church",
+      "name": "EOTC Toulouse – Église orthodoxe éthiopienne",
+      "url": "https://eotctoulouse.org",
+      "description": "Église orthodoxe éthiopienne Tewahedo à Toulouse – histoire, foi, liturgie et communauté.",
+      "address": {
+        "@type": "PostalAddress",
+        "addressLocality": "Toulouse",
+        "addressCountry": "FR"
+      }
+    }
+    </script>
 </head>
 
 <body>
+    <!-- Header & Navigation -->
     <header>
         <nav>
             <ul>
                 <li><a href="/index.html">Accueil</a></li>
-                <li><a href="/html/notre-eglise.html">Notre Eglise</a></li>
+                <li><a href="/html/notre-eglise.html">Notre Église</a></li>
                 <li><a href="/html/lecture.html">Meskel</a></li>
             </ul>
         </nav>
+
+        <!-- Hero Section with keyword-rich H1 and intro -->
         <div class="hero-text">
-            <h1>EOTC TOULOUSE</h1>
-            <p><em>Découvrez l'église orthodoxe éthiopienne à Toulouse</em></p>
+            <h1>EOTC Toulouse – Église Orthodoxe Éthiopienne Tewahedo</h1>
+            <p><em>Découvrez la communauté EOTC à Toulouse : liturgie, foi, traditions et événements de l'Église orthodoxe éthiopienne.</em></p>
         </div>
     </header>
+
+    <!-- Main Content: optimized for SEO -->
+    <main>
+        <section>
+            <h2>À propos de l'Église EOTC Toulouse</h2>
+            <p>
+                L'Église orthodoxe éthiopienne (EOTC) de Toulouse est une communauté vivante qui célèbre la foi chrétienne
+                selon le rite Tewahedo. Nous proposons des services liturgiques, des activités communautaires et une transmission
+                de la foi aux générations futures. Notre église est ouverte à tous ceux qui souhaitent découvrir ou rejoindre
+                la tradition orthodoxe éthiopienne à Toulouse.
+            </p>
+        </section>
+
+        <section>
+            <h2>Nos Services et Pratiques</h2>
+            <ul>
+                <li>Liturgies en guèze et en langues locales</li>
+                <li>Enseignements et catéchèse pour enfants et adultes</li>
+                <li>Événements et fêtes religieuses (Meskel, Timkat, etc.)</li>
+                <li>Actions communautaires et solidarité</li>
+            </ul>
+        </section>
+
+        <section>
+            <h2>Pourquoi choisir EOTC Toulouse</h2>
+            <p>
+                Notre église offre une expérience authentique de la foi orthodoxe éthiopienne. Avec un accent sur la prière,
+                la liturgie, et l'engagement communautaire, EOTC Toulouse est un lieu pour la spiritualité, l'apprentissage et
+                la fraternité.
+            </p>
+        </section>
+    </main>
+
+    <!-- Footer -->
+    <footer>
+        <p>© <span id="year"></span> EOTC Toulouse. Tous droits réservés.</p>
+    </footer>
+
+    <script>
+        document.getElementById("year").textContent = new Date().getFullYear();
+    </script>
 </body>
 
 </html>
