--- a/index.html
+++ b/index.html
@@ -55,46 +55,13 @@
             </ul>
         </nav>
 
-        <!-- Hero Section with keyword-rich H1 and intro -->
+        <!-- Hero Section with keyword-rich H1 -->
         <div class="hero-text">
-            <h1>EOTC Toulouse – Église Orthodoxe Éthiopienne Tewahedo</h1>
-            <p><em>Découvrez la communauté EOTC à Toulouse : liturgie, foi, traditions et événements de l'Église orthodoxe éthiopienne.</em></p>
+            <h1>EOTC TOULOUSE</h1>
+            <p><em>Découvrez l'église orthodoxe éthiopienne à Toulouse</em></p>
         </div>
     </header>
 
-    <!-- Main Content: optimized for SEO -->
-    <main>
-        <section>
-            <h2>À propos de l'Église EOTC Toulouse</h2>
-            <p>
-                L'Église orthodoxe éthiopienne (EOTC) de Toulouse est une communauté vivante qui célèbre la foi chrétienne
-                selon le rite Tewahedo. Nous proposons des services liturgiques, des activités communautaires et une transmission
-                de la foi aux générations futures. Notre église est ouverte à tous ceux qui souhaitent découvrir ou rejoindre
-                la tradition orthodoxe éthiopienne à Toulouse.
-            </p>
-        </section>
-
-        <section>
-            <h2>Nos Services et Pratiques</h2>
-            <ul>
-                <li>Liturgies en guèze et en langues locales</li>
-                <li>Enseignements et catéchèse pour enfants et adultes</li>
-                <li>Événements et fêtes religieuses (Meskel, Timkat, etc.)</li>
-                <li>Actions communautaires et solidarité</li>
-            </ul>
-        </section>
-
-        <section>
-            <h2>Pourquoi choisir EOTC Toulouse</h2>
-            <p>
-                Notre église offre une expérience authentique de la foi orthodoxe éthiopienne. Avec un accent sur la prière,
-                la liturgie, et l'engagement communautaire, EOTC Toulouse est un lieu pour la spiritualité, l'apprentissage et
-                la fraternité.
-            </p>
-        </section>
-    </main>
-
-    <!-- Footer -->
     <footer>
         <p>© <span id="year"></span> EOTC Toulouse. Tous droits réservés.</p>
     </footer>
