--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
             <ul>
                 <li><a href="/index.html">Accueil</a></li>
                 <li><a href="/html/notre-eglise.html">Notre Église</a></li>
-                <li><a href="/html/evenements.html">Evenements</a></li>
+                <li><a href="/html/evenements.html">Événements</a></li>
             </ul>
         </nav>
 
