--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="notre-eglise.html">Notre Église</a></li>
-                <li><a href="evenements.html">Événements</a></li>
+                <li><a href="/html/notre_eglise.html">Notre Église</a></li>
+                <li><a href="/html/evenements.html">Événements</a></li>
             </ul>
         </nav>
         <div class="hero-text">
-            <h1>EOTC TOULOUSE</h1>
+            <h1>EEOT TOULOUSE</h1>
             <p><em>Découvrez l'église orthodoxe éthiopienne à Toulouse</em></p>
         </div>
     </header>
