correction de la boucle infinie

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
         };
         
         // Start loading the image
-        img.src = 'egliseinterior.jpg';
+        img.src = '/img/egliseinterior.jpg';
     </script>
 </body>
 </html>
