lien page evenement

--- a/html/evenements.html
+++ b/html/evenements.html
@@ -87,7 +87,7 @@
       </div>
       <nav class="nav-menu" aria-label="Navigation principale">
         <a href="/index.html">Accueil</a>
-        <a href="/html/notre-eglise.html">Notre Église</a>
+        <a href="/html/notre_eglise.html">Notre Église</a>
       </nav>
     </div>
   </header>
