modification des liens, et ajout de sitemap.xml

--- a/html/evenements.html
+++ b/html/evenements.html
@@ -26,7 +26,7 @@
   <link rel="icon" type="image/x-icon" href="/img/eglise_icone.ico" />
   
   <!-- SEO: Canonical URL (update to your actual domain when deployed) -->
-  <link rel="canonical" href="https://eotc-toulouse.fr/evenements.html" />
+  <link rel="canonical" href="https://eotc-toulouse.fr/html/evenements.html" />
   
   <!-- Open Graph meta tags for social media sharing -->
   <meta property="og:title" content="Événements à venir – EOTC Toulouse" />
@@ -41,7 +41,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Événements à venir – EOTC Toulouse" />
   <meta name="twitter:description" content="Découvrez les prochains événements de l'Église orthodoxe éthiopienne à Toulouse." />
-  <meta name="twitter:image" content="https://eotc-toulouse.fr/egliseinterior.jpg" />
+  <meta name="twitter:image" content="https://eotc-toulouse.fr/img/egliseinterior.jpg" />
   
   <!-- SEO: Structured data (JSON-LD) for rich search results -->
   <script type="application/ld+json">
@@ -50,8 +50,8 @@
     "@type": "Church",
     "name": "EOTC Toulouse – Église orthodoxe éthiopienne à Toulouse",
     "url": "https://eotc-toulouse.fr",
-    "logo": "https://eotc-toulouse.fr/eglise_icone.ico",
-    "image": "https://eotc-toulouse.fr/egliseinterior.jpg",
+    "logo": "https://eotc-toulouse.fr/img/eglise_icone.ico",
+    "image": "https://eotc-toulouse.fr/img/egliseinterior.jpg",
     "description": "Église orthodoxe éthiopienne à Toulouse. Cultes, études bibliques et activités communautaires.",
     "address": {
       "@type": "PostalAddress",
