--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="eglise_icone.ico" type="image/x-icon" />
+    <link rel="icon" href="/img/eglise_icone.ico" type="image/x-icon" />
     <title>Église orthodoxe éthiopienne à Toulouse</title>
     
     <!-- Preconnect for faster font loading -->
