supprimer repertoire html

--- a/evenements.html
+++ b/evenements.html
@@ -26,14 +26,14 @@
   <link rel="icon" type="image/x-icon" href="/img/eglise_icone.ico" />
   
   <!-- SEO: Canonical URL (update to your actual domain when deployed) -->
-  <link rel="canonical" href="https://eotc-toulouse.fr/html/evenements.html" />
+  <link rel="canonical" href="https://eotctoulouse.org/evenements.html" />
   
   <!-- Open Graph meta tags for social media sharing -->
   <meta property="og:title" content="Événements à venir – EOTC Toulouse" />
   <meta property="og:description" content="Découvrez les prochains événements de l'Église orthodoxe éthiopienne à Toulouse. Cultes, études bibliques et activités communautaires." />
   <meta property="og:type" content="website" />
-  <meta property="og:url" content="https://eotc-toulouse.fr/evenements.html" />
-  <meta property="og:image" content="https://eotc-toulouse.fr/egliseinterior.jpg" />
+  <meta property="og:url" content="https://eotctoulouse.org/evenements.html" />
+  <meta property="og:image" content="https://eotctoulouse.org/img/egliseinterior.jpg" />
   <meta property="og:locale" content="fr_FR" />
   <meta property="og:site_name" content="EOTC Toulouse" />
   
@@ -41,7 +41,7 @@
   <meta name="twitter:card" content="summary_large_image" />
   <meta name="twitter:title" content="Événements à venir – EOTC Toulouse" />
   <meta name="twitter:description" content="Découvrez les prochains événements de l'Église orthodoxe éthiopienne à Toulouse." />
-  <meta name="twitter:image" content="https://eotc-toulouse.fr/img/egliseinterior.jpg" />
+  <meta name="twitter:image" content="https://eotctoulouse.org/img/egliseinterior.jpg" />
   
   <!-- SEO: Structured data (JSON-LD) for rich search results -->
   <script type="application/ld+json">
@@ -49,9 +49,9 @@
     "@context": "https://schema.org",
     "@type": "Church",
     "name": "EOTC Toulouse – Église orthodoxe éthiopienne à Toulouse",
-    "url": "https://eotc-toulouse.fr",
-    "logo": "https://eotc-toulouse.fr/img/eglise_icone.ico",
-    "image": "https://eotc-toulouse.fr/img/egliseinterior.jpg",
+    "url": "https://eotctoulouse.org",
+    "logo": "https://eotctoulouse.org/img/eglise_icone.ico",
+    "image": "https://eotctoulouse.org/img/egliseinterior.jpg",
     "description": "Église orthodoxe éthiopienne à Toulouse. Cultes, études bibliques et activités communautaires.",
     "address": {
       "@type": "PostalAddress",
@@ -87,7 +87,7 @@
       </div>
       <nav class="nav-menu" aria-label="Navigation principale">
         <a href="/index.html">Accueil</a>
-        <a href="/html/notre_eglise.html">Notre Église</a>
+        <a href="/notre_eglise.html">Notre Église</a>
       </nav>
     </div>
   </header>
