--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
-                <li><a href="/html/notre_eglise.html">Notre Église</a></li>
-                <li><a href="/html/evenements.html">Événements</a></li>
+                <li><a href="/notre_eglise.html">Notre Église</a></li>
+                <li><a href="/evenements.html">Événements</a></li>
             </ul>
         </nav>
         <div class="hero-text">
