--- a/notre_eglise.html
+++ b/notre_eglise.html
@@ -85,7 +85,7 @@
       <!-- Centered navigation links -->
       <nav id="nav-menu" class="nav-menu" aria-label="Navigation principale">
         <a href="/index.html">Accueil</a>
-        <a href="/html/evenements.html">Événements</a>
+        <a href="/evenements.html">Événements</a>
       </nav>
     </div>
   </header>
