--- a/notre_eglise.html
+++ b/notre_eglise.html
@@ -44,8 +44,8 @@
     .prose{ max-width:900px; margin:0 auto; display:grid; gap:18px; line-height:1.65 }
     .prose h2{ margin:14px 0 6px }
     .quote{ padding:14px 16px; border-left:3px solid rgba(255,255,255,.2); background:rgba(255,255,255,.04); border-radius:8px }
-    .backbar{ background:#000; border-top:1px solid rgba(255,255,255,.12); }
-    .backbar .container{ display:flex; align-items:center; justify-content:space-between; padding:10px 0; }
+    .backbar{ background: rgba(0, 0, 0, 0.75); border-top:1px solid rgba(255,255,255,.12); }
+    .backbar .container{ display:flex; position: sticky; top: 0; align-items:center; justify-content:space-between; padding:10px 0; }
     .backbar small{ color:#fff; font-weight:600 }
     .backbar a{ color:#fff; text-decoration:none }
     .backbar a:hover{ text-decoration:underline }
