--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <div class="loading-spinner"></div>
         
         <nav>
+            <div class="nav-container">
+                <h2>Menu Hambourger</h2>
+                <button class="menu-toggle" arial-label="Hambourger menu">☰</button>
+            </div>
             <ul>
                 <li><a href="index.html">Accueil</a></li>
                 <li><a href="/notre_eglise.html">Notre Église</a></li>
